# gateway

./: Cargo.toml  README.md  ai.gateway.heartbeat.plist  ai.gateway.plist  launch  setup
docs/superpowers/plans/: 2026-05-30-rust-gateway.md  2026-06-01-pragmatic-quality-pass.md  2026-06-18-core-context-files.md  2026-07-19-status-diff-summary.md
docs/superpowers/specs/: 2026-05-30-rust-gateway-design.md  2026-06-01-pragmatic-quality-pass-design.md  2026-06-17-core-context-files-design.md  2026-07-12-gpt-5-6-defaults-design.md  2026-07-19-status-diff-summary-design.md
prompts/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SYSTEM.md  TOOLS.md  USER.md
src/: AGENTS.md  SYSTEM.md  anthropic_proxy.rs  bot.rs  cli.rs  cli_commands.rs  codex.rs  commands.rs  config.rs  context.rs  heartbeat.rs  json_file.rs  launchd.rs  lib.rs  llm.rs  logs.rs  main.rs  provider.rs  run_mode.rs  session.rs  status.rs  telegram.rs  text.rs  tts.rs  update.rs
src/prompts/: HEARTBEAT.md  MEMORY.md
