[package]
name = "gateway"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tempfile = "3.10.1"
ureq = { version = "2.10.1", features = ["json"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
