[package]
name = "gateway"
version = "0.1.56"
edition = "2021"
license = "MIT"
description = "Lean Rust Telegram-to-Codex gateway"
readme = "README.md"
repository = "https://github.com/DanielZlotin/gateway"
homepage = "https://github.com/DanielZlotin/gateway"
keywords = ["telegram", "codex", "gateway", "cli"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.38", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tempfile = "3.10.1"
tiny_http = "0.12.0"
ureq = { version = "2.10.1", features = ["json"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
